--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
