--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "node --watch server.js",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
   "type": "module",
   "license": "ISC",
-  "packageManager": "pnpm@10.12.1",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.21.1"
   }
 }
